<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingVertical="@dimen/dp_15"
        android:text="@string/main_title"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_20"
        android:textStyle="bold" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <Button
                android:id="@+id/bindBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />

            <Button
                android:id="@+id/unbindBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unregister" />

            <Button
                android:id="@+id/takePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="拍照" />


            <Button
                android:id="@+id/faceControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="人脸控制" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dp_15"
                android:paddingVertical="@dimen/dp_20"
                android:text="@string/output_raw_data"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/outputTextView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@android:color/darker_gray"
                android:padding="15dp"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/dp_15"
                android:paddingVertical="@dimen/dp_20"
                android:text="拍照后的图片路径:"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/imagePath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/darker_gray"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="@dimen/sp_16"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/photo_iv"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:scaleType="centerInside" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>